Infrastructure for indexing flow